Create Class no longer working with changes to get validation working. Pushing to get a 2nd set of eyes on it.

--- a/se491project/src/messages.properties
+++ b/se491project/src/messages.properties
@@ -10,3 +10,5 @@ Pattern.userRegistrationFormBean.zip = Invalid Zip code.
 NotEmpty.userRegistrationFormBean.address =Address is required.
 NotEmpty.userRegistrationFormBean.country = Country is required.  
 Length.userRegistrationFormBean.zip = Zip code must be 5 digits.
+NotEmpty.createClassFormBean.classTitle = Class Title is required.
+NotEmpty.createClassFormBean.class = Class Description is required.
