--- a/se491project/src/messages.properties
+++ b/se491project/src/messages.properties
@@ -11,4 +11,11 @@ NotEmpty.userRegistrationFormBean.address =Address is required.
 NotEmpty.userRegistrationFormBean.country = Country is required.  
 Length.userRegistrationFormBean.zip = Zip code must be 5 digits.
 NotEmpty.createClassFormBean.classTitle = Class Title is required.
-NotEmpty.createClassFormBean.class = Class Description is required.
+NotEmpty.createClassFormBean.classDescription = Class Description is required.
+NotEmpty.createClassFormBean.classCategory = Class Category is required.
+NotEmpty.createClassFormBean.classCategory = Class Category is required.
+NotEmpty.createClassFormBean.classStartTime = Class Start Time is required.
+NotEmpty.createClassFormBean.classEndTime = Class End Time is required.
+Pattern.createClassFormBean.minStudents = Invalid Minimum Number of Students.
+Pattern.createClassFormBean.maxStudents = Invalid Minimum Number of Students.
+
