added pattern regex for time formats in class create form updated error messages to reflect pattern matching. updated form controller to fix error writting date

--- a/se491project/src/messages.properties
+++ b/se491project/src/messages.properties
@@ -14,8 +14,8 @@ NotEmpty.createClassFormBean.classTitle = Class Title is required.
 NotEmpty.createClassFormBean.classDescription = Class Description is required.
 NotEmpty.createClassFormBean.classCategory = Class Category is required.
 NotEmpty.createClassFormBean.classCategory = Class Category is required.
-NotEmpty.createClassFormBean.classStartTime = Class Start Time is required.
-NotEmpty.createClassFormBean.classEndTime = Class End Time is required.
+Pattern.createClassFormBean.classStartTime = Class Start Time should be in 12 hour format.
+Pattern.createClassFormBean.classEndTime = Class End Time should be in 12 hour format.
 Pattern.createClassFormBean.minStudents = Invalid Minimum Number of Students.
-Pattern.createClassFormBean.maxStudents = Invalid Minimum Number of Students.
+Pattern.createClassFormBean.maxStudents = Invalid Maximum Number of Students.
 
