--- a/se491project/war/WEB-INF/classes/messages.properties
+++ b/se491project/war/WEB-INF/classes/messages.properties
@@ -14,6 +14,7 @@ NotEmpty.createClassFormBean.classTitle = Class Title is required.
 NotEmpty.createClassFormBean.classDescription = Class Description is required.
 NotEmpty.createClassFormBean.classCategory = Class Category is required.
 NotEmpty.createClassFormBean.classCategory = Class Category is required.
+NotEmpty.createClassFormBean.classDate = Class Date is required.
 Pattern.createClassFormBean.classStartTime = Class Start Time should be in 12 hour format.
 Pattern.createClassFormBean.classEndTime = Class End Time should be in 12 hour format.
 Pattern.createClassFormBean.minStudents = Invalid Minimum Number of Students.
